--- a/public/stylesheet/product-add.css
+++ b/public/stylesheet/product-add.css
@@ -115,6 +115,10 @@ header > h1 {
 }
 
 /*Type styling*/
+div > input {
+  width: 100%;
+}
+
 #dvd_input_field {
   display: flex;
   align-items: center;
@@ -167,8 +171,6 @@ header > h1 {
   margin-left: 65px;
 }
 
-/*Error message styling*/
-/**/
 /*Styling for footer*/
 /**/
 footer {
