--- a/public/stylesheet/product-list.scss
+++ b/public/stylesheet/product-list.scss
@@ -113,3 +113,27 @@ footer {
 footer > h3 {
   font-weight: lighter;
 }
+
+
+
+.grid-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: auto;
+  grid-gap: 10px;
+  border: 1px solid #ccc;
+  padding: 10px;
+}
+
+.grid-header {
+  font-weight: bold;
+}
+
+.grid-row {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 10px;
+  align-items: center;
+  border-top: 1px solid #ccc;
+  padding: 10px 0;
+}
